syntax = "proto3";
package euc_backend;

// import "google/protobuf/timestamp.proto";
// import "enumps.proto";

message GetClubConditionRequest {
  optional int32 id = 1;
  optional string name = 2;
  optional string abbreviation = 3;
  optional int32 fund =4;
  optional int32 total_member = 5;

  optional int32 page =10;
  optional int32 limit =11;
  optional bool is_deleted =13;
  optional bool is_extra_area =15;
  optional bool is_extra_club_fee =16;

}

message CreateClubRequest {
  string name = 2;
  optional string abbreviation = 3;
  optional int32 fund =4;
  optional int32 area_id = 5;
}

message UpdateClubDataRequest {
  optional string name = 2;
  optional string abbreviation = 3;
  optional int32 fund =4;
  optional int32 total_member = 5;
  optional int32 area_id = 6;
}

message UpdateClubRequest {
  GetClubConditionRequest conditions =1;
  UpdateClubDataRequest data =2;
}

message RemoveClubRequest {
  int32 id = 1;
}
