syntax = "proto3";
package euc_backend;


import "member/member.proto";

message MemberReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  optional Member payload = 4;
}

message MemberListDataReply {
  repeated Member member_list = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message MemberListReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  MemberListDataReply payload = 4;
}
